Vector/test/toArray/nonnilable-owned.good
nonnilable-owned.chpl:3: error: toArray() method is not available on a 'listng' with elements of a non-nilable owned type, here: owned object
