Vector/test/toArray/nonnilable-owned.chpl
use ListNG;
var l: listng(owned object);
var a = l.toArray();
